# numbat-embedded

./: ---CMakeLists.txt  .compiler_makedefs  .construct_module  .construct_numbat_module  .echronos_makedefs  .gitignore  .lib_makedefs  .numbat_makedefs  .ti_makedefs  .travis.yml  .utility_makedefs  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  ]  debug.sh  doxygen.conf  ek-tm4c123gxl.cfg  flash-no-gdb.sh  flash.sh  gdb-file  makedefs  numbat-system.prx  system.prx
build-tools/: build_env.cmake  compiler_makedefs.cmake  construct_numbat_module.cmake  construct_number_module.cmake  echronos.cmake  module_template.cmake  ti_makedefs.cmake
build-tools/echronos/: LICENSE  README.md
docs/adc/: DIFFERENTIAL_PAIR  PIN_DESCRIPTION
echronos/: build_info
libs/SPSCQueue/: SPSCQueue.h
libs/adc/: VREF  adc.c  adc.h
libs/pwm/: README  pwm.c  pwm.h  pwm_hw.c  pwm_hw.h
libs/ros_echronos/: .ros_echronos  CMakeLists.txt  Incoming_Message_Buffer.cpp  Message.cpp  Message_Buffer.cpp  Message_Descriptor.cpp  NodeHandle.cpp  Node_Handle.cpp  Publisher.cpp  Subscriber.cpp  alloc.cpp  ros.cpp
libs/ros_echronos/arch/tm4c/: can_impl.cpp
libs/ros_echronos/build_tools/: genmsg_cpp.py  msg_gen.py  pwm-sample.hpp
libs/ros_echronos/build_tools/msg_gen/cpp/include/owr_messages/: board.hpp  pwm-compatible.h  pwm.h  pwm.hpp
libs/ros_echronos/include/: ListNode.hpp  Message.hpp  Message_Buffer.hpp  Message_Descriptor.hpp  NodeHandle.hpp  Node_Handle.hpp  Publisher.hpp  Subscriber.hpp  alloc.hpp  can_impl.hpp  ros.hpp
libs/ros_echronos/include/owr_messages/: pwm.hpp
libs/ros_echronos/include/std_msgs/: Float64.hpp
libs/servo/: servo.c  servo.h
libs/ti/driverlib/: Makefile
libs/ti/inc/: hw_ints.h
libs/ti/sensorlib/: Makefile
libs/ti/usblib/: Makefile
module_template/: CMakeLists.txt  package.xml  ros_sub_test.prx  template_sub.cpp
modules/adc/: ASSUMPTIONS  DESIGNS  INTERNAL_TEMP_SENS  adc.c  adc.h
modules/adc_test/: adc_test.c  adc_test.prx
modules/blinky/: blinky.c  blinky.cpp  blinky.prx
modules/boilerplate/: boilerplate.c  boilerplate.cpp  boilerplate.h
modules/can_test/: can_test.c  can_test.prx
modules/echronos_test/: echronos_test.c  echronos_test.prx
modules/left_locomotion/: left_locomotion.c  left_locomotion.cpp  left_locomotion.prx  mod_left_locomotion.c  mod_left_locomotion.prx
modules/pwm_test/: pwm_test.c  pwm_test.prx
modules/pwmlib/: README  pwm_hw.h  pwmlib.c  pwmlib.h
modules/retransmitter/: message.h  retransmitter.cpp  retransmitter.prx
modules/right_locomotion/: right_locomotion.c  right_locomotion.cpp  right_locomotion.prx
modules/ros_sub_test/: can_wait_task.cpp  ros_sub_test.cpp  ros_sub_test.prx
modules/ros_test/: ros_test.cpp  ros_test.prx
modules/servo/: servo.c  servo.h
modules/servo_test/: servo_test.c  servo_test.cpp
modules/timer_test/: timer_test.c  timer_test.prx
src/libs/SPSCQueue/: SPSCQueue.h
src/libs/adc/: CMakeLists.txt  PIN_DESCRIPTION  adc.c  adc.h  package.xml
src/libs/i2c/: CMakeLists.txt  PIN_DESCRIPTION  i2c.c  i2c.h  package.xml
src/libs/i2c/science-mod/: HX711.cpp  HX711.h  LIS3MDL.cpp  LIS3MDL.h  SI7021.cpp  SI7021.h  TCA9548A.cpp  TCA9548A.h  TCS34725.cpp  TCS34725.h  hx711.h  lis3mdl.c  lis3mdl.h  si7021.c  si7021.h  tcs34725.h
src/libs/pid/: CMakeLists.txt  package.xml  pid.cpp  pid.h
src/libs/pwm/: CMakeLists.txt  package.xml  pwm.c
src/libs/qei/: qei.c  qei.h  qei_hw.h
src/libs/ros_echronos/: .ros_echronos  CANPromise.cpp  Float64.cpp  Incoming_Message_Buffer.cpp  ListNode.cpp  Message.cpp  Message_Buffer.cpp  Message_Descriptor.cpp  NodeHandle.cpp  Publisher.cpp  SHARING.txt  alloc.cpp  can.cpp  pwm.cpp  ros.cpp  ros_echronos.cmake
src/libs/ros_echronos/arch/tm4c/: can_impl.cpp
src/libs/ros_echronos/build_tools/: genmsg_cpp.py  msg_gen.py
src/libs/ros_echronos/include/: CANPromise.hpp  Message.hpp  Message_Buffer.hpp  Message_Descriptor.hpp  NodeHandle.hpp  Publisher.hpp  Subscriber.hpp  alloc.hpp  can.hpp  can_impl.hpp  ros.hpp  time.hpp
src/libs/ros_echronos/include/can/: advertise_topic.hpp  (+3 more)
src/libs/ros_echronos/templates/: Message_Buffer.cpp  Publisher.cpp  Subscriber.cpp
src/libs/servo/: CMakeLists.txt  package.xml  servo.c  servo.h
src/libs/ti/: CMakeLists.txt  package.xml
src/libs/ti/driverlib/: Makefile  interrupt.c
src/libs/ti/inc/: hw_ints.h
src/libs/ti/sensorlib/: Makefile
src/libs/ti/usblib/: Makefile
src/libs/ti/utils/: Makefile
src/libs/tlsf/: CMakeLists.txt  package.xml  tlsf.c
src/modules/adc_test/: CMakeLists.txt  adc_test.cpp  adc_test.prx  can_wait_task.cpp  package.xml
src/modules/blinky/: CMakeLists.txt  blinky.cpp  blinky.prx  package.xml
src/modules/blue_arm/: CMakeLists.txt  blue_arm.cpp  blue_arm.prx  package.xml
src/modules/boilerplate/: boilerplate.c  boilerplate.h  crti.cpp  crtn.cpp
src/modules/can_test/: can_test.c
src/modules/echronos_test/: echronos_test.prx
src/modules/left_locomotion/: CMakeLists.txt  left_locomotion.cpp  left_locomotion.prx  package.xml
src/modules/lidar_tilt/: CMakeLists.txt  lidar_tilt.cpp  lidar_tilt.prx  package.xml
src/modules/pid_test/: CMakeLists.txt  package.xml  pid_test.cpp  pid_test.prx
src/modules/pwm_test/: pwm_test.c  pwm_test.prx
src/modules/retransmitter/: CMakeLists.txt  message.h  package.xml  retransmitter.cpp  retransmitter.prx
src/modules/right_locomotion/: CMakeLists.txt  package.xml  right_locomotion.cpp  right_locomotion.prx
src/modules/ros_sub_test/: CMakeLists.txt  package.xml  ros_sub_test.cpp  ros_sub_test.prx
src/modules/ros_test/: CMakeLists.txt  package.xml  ros_test.cpp  ros_test.prx
src/modules/science/: CMakeLists.txt  CMakeLists1.txt  README  package.xml  package1.xml  science.cpp  science.prx
src/modules/science_test/: CMakeLists.txt  README  TCA9548A.cpp  TCA9548A.h  package.xml  science_test.cpp  science_test.prx
src/modules/servo_test/: servo_test.cpp  servo_test.prx
src/modules/timer_test/: timer_test.c
src/modules/voltmeter/: CMakeLists.txt  can_wait_task.cpp  package.xml  voltmeter.cpp  voltmeter.prx
(+2 files in other folders)
