# NOTE: this file is not maintained, use the Makefile!
cmake_minimum_required(VERSION 3.6)
project(numbat_embedded)

# PLATFORM (ARM)
set(CMAKE_SYSTEM_NAME  Generic)
set(COMPILER_PREFIX arm-none-eabi)
set(CMAKE_C_COMPILER  ${COMPILER_PREFIX}-gcc)

# ECHRONOS
set(PRJ_TOOL enchronos/bin/prj.sh)

# TI
set(TI_LIBS libs/ti)
set(TI_LIB_DIRS ${TI_LIBS}/driverlib ${TI_LIBS}/sensorlib ${TI_LIBS}/utils ${TI_LIBS}/usblib)
set(CPU -mcpu=cortex-m4)
set(FPU -mfpu=fpv4-sp-d16 -mfloat-abi=harc)
set(CMAKE_ASM_FLAGS -mthumb ${CPU} ${FPU} -mlittle-endian -MD)
set(TI_CFLAGS -mthumb ${CPU} ${FPU} -mlittle-endian -MD)
set(TI_LD_FLAGS --gc-sections)

set(CMAKE_C_FLAGS -DTARGET_IS_TMAC123_RB1 ${TI_CFLAGS})
set(CMAKE_EXE_LINKER_FLAGS ${TI_LD_FLAGS})
set(LD_F)
set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        echronos/build/blinky-echronos/bitband.h
        echronos/build/blinky-echronos/debug.h
        echronos/build/blinky-echronos/generic.debug.c
        echronos/build/blinky-echronos/rtos-kochab.c
        echronos/build/blinky-echronos/rtos-kochab.h
        echronos/build/can_test-echronos/bitband.h
        echronos/build/can_test-echronos/debug.h
        echronos/build/can_test-echronos/generic.debug.c
        echronos/build/can_test-echronos/rtos-kochab.c
        echronos/build/can_test-echronos/rtos-kochab.h
        echronos/build/echronos_test-echronos/bitband.h
        echronos/build/echronos_test-echronos/debug.h
        echronos/build/echronos_test-echronos/generic.debug.c
        echronos/build/echronos_test-echronos/rtos-kochab.c
        echronos/build/echronos_test-echronos/rtos-kochab.h
        echronos/build/timer_test-echronos/bitband.h
        echronos/build/timer_test-echronos/debug.h
        echronos/build/timer_test-echronos/generic.debug.c
        echronos/build/timer_test-echronos/rtos-kochab.c
        echronos/build/timer_test-echronos/rtos-kochab.h
        echronos/share/packages/armv7m/example/bitband.c
        echronos/share/packages/armv7m/rtos-acamar/rtos-acamar.c
        echronos/share/packages/armv7m/rtos-acamar/rtos-acamar.h
        echronos/share/packages/armv7m/rtos-acrux/rtos-acrux.c
        echronos/share/packages/armv7m/rtos-acrux/rtos-acrux.h
        echronos/share/packages/armv7m/rtos-gatria/rtos-gatria.c
        echronos/share/packages/armv7m/rtos-gatria/rtos-gatria.h
        echronos/share/packages/armv7m/rtos-kochab/rtos-kochab.c
        echronos/share/packages/armv7m/rtos-kochab/rtos-kochab.h
        echronos/share/packages/armv7m/rtos-kraz/rtos-kraz.c
        echronos/share/packages/armv7m/rtos-kraz/rtos-kraz.h
        echronos/share/packages/armv7m/rtos-phact/rtos-phact.c
        echronos/share/packages/armv7m/rtos-phact/rtos-phact.h
        echronos/share/packages/armv7m/rtos-rigel/rtos-rigel.c
        echronos/share/packages/armv7m/rtos-rigel/rtos-rigel.h
        echronos/share/packages/armv7m/bitband.h
        echronos/share/packages/generic/debug.c
        echronos/share/packages/generic/debug.h
        echronos/share/packages/generic/hello.c
        echronos/share/packages/machine-armv7m-common/example/machine-timer.c
        echronos/share/packages/machine-qemu-simple/example/ext-irq-handler.c
        echronos/share/packages/machine-stm32f4-discovery/example/blinky.c
        echronos/share/packages/machine-stm32f4-discovery/example/fp-regs-test.c
        echronos/share/packages/machine-stm32f4-discovery/example/machine-fp.c
        echronos/share/packages/machine-stm32f4-discovery/example/machine-fp.h
        echronos/share/packages/machine-stm32f4-discovery/led.c
        echronos/share/packages/machine-stm32f4-discovery/led.h
        echronos/share/packages/rtos-example/acamar-config-demo.c
        echronos/share/packages/rtos-example/acamar-test.c
        echronos/share/packages/rtos-example/acrux-test.c
        echronos/share/packages/rtos-example/fp-test.c
        echronos/share/packages/rtos-example/gatria-test.c
        echronos/share/packages/rtos-example/kochab-mutex-demo.c
        echronos/share/packages/rtos-example/kochab-test.c
        echronos/share/packages/rtos-example/kraz-test.c
        echronos/share/packages/rtos-example/machine-timer.h
        echronos/share/packages/rtos-example/phact-mutex-demo.c
        echronos/share/packages/rtos-example/phact-test.c
        echronos/share/packages/rtos-example/rigel-test.c
        echronos/share/packages/rtos-example/sched-demo.c
        echronos/share/packages/rtos-example/sem-demo.c
        echronos/share/packages/rtos-example/signal-demo.c
        echronos/share/packages/rtos-example/timer-test.c
        libs/ti/driverlib/adc.c
        libs/ti/driverlib/adc.h
        libs/ti/driverlib/aes.c
        libs/ti/driverlib/aes.h
        libs/ti/driverlib/can.c
        libs/ti/driverlib/can.h
        libs/ti/driverlib/comp.c
        libs/ti/driverlib/comp.h
        libs/ti/driverlib/cpu.c
        libs/ti/driverlib/cpu.h
        libs/ti/driverlib/crc.c
        libs/ti/driverlib/crc.h
        libs/ti/driverlib/debug.h
        libs/ti/driverlib/des.c
        libs/ti/driverlib/des.h
        libs/ti/driverlib/eeprom.c
        libs/ti/driverlib/eeprom.h
        libs/ti/driverlib/emac.c
        libs/ti/driverlib/emac.h
        libs/ti/driverlib/epi.c
        libs/ti/driverlib/epi.h
        libs/ti/driverlib/flash.c
        libs/ti/driverlib/flash.h
        libs/ti/driverlib/fpu.c
        libs/ti/driverlib/fpu.h
        libs/ti/driverlib/gpio.c
        libs/ti/driverlib/gpio.h
        libs/ti/driverlib/hibernate.c
        libs/ti/driverlib/hibernate.h
        libs/ti/driverlib/i2c.c
        libs/ti/driverlib/i2c.h
        libs/ti/driverlib/interrupt.c
        libs/ti/driverlib/interrupt.h
        libs/ti/driverlib/lcd.c
        libs/ti/driverlib/lcd.h
        libs/ti/driverlib/mpu.c
        libs/ti/driverlib/mpu.h
        libs/ti/driverlib/onewire.c
        libs/ti/driverlib/onewire.h
        libs/ti/driverlib/pin_map.h
        libs/ti/driverlib/pwm.c
        libs/ti/driverlib/pwm.h
        libs/ti/driverlib/qei.c
        libs/ti/driverlib/qei.h
        libs/ti/driverlib/rom.h
        libs/ti/driverlib/rom_map.h
        libs/ti/driverlib/rtos_bindings.h
        libs/ti/driverlib/shamd5.c
        libs/ti/driverlib/shamd5.h
        libs/ti/driverlib/ssi.c
        libs/ti/driverlib/ssi.h
        libs/ti/driverlib/sw_crc.c
        libs/ti/driverlib/sw_crc.h
        libs/ti/driverlib/sysctl.c
        libs/ti/driverlib/sysctl.h
        libs/ti/driverlib/sysexc.c
        libs/ti/driverlib/sysexc.h
        libs/ti/driverlib/systick.c
        libs/ti/driverlib/systick.h
        libs/ti/driverlib/timer.c
        libs/ti/driverlib/timer.h
        libs/ti/driverlib/uart.c
        libs/ti/driverlib/uart.h
        libs/ti/driverlib/udma.c
        libs/ti/driverlib/udma.h
        libs/ti/driverlib/usb.c
        libs/ti/driverlib/usb.h
        libs/ti/driverlib/watchdog.c
        libs/ti/driverlib/watchdog.h
        libs/ti/inc/asmdefs.h
        libs/ti/inc/hw_adc.h
        libs/ti/inc/hw_aes.h
        libs/ti/inc/hw_can.h
        libs/ti/inc/hw_ccm.h
        libs/ti/inc/hw_comp.h
        libs/ti/inc/hw_des.h
        libs/ti/inc/hw_eeprom.h
        libs/ti/inc/hw_emac.h
        libs/ti/inc/hw_epi.h
        libs/ti/inc/hw_fan.h
        libs/ti/inc/hw_flash.h
        libs/ti/inc/hw_gpio.h
        libs/ti/inc/hw_hibernate.h
        libs/ti/inc/hw_i2c.h
        libs/ti/inc/hw_ints.h
        libs/ti/inc/hw_lcd.h
        libs/ti/inc/hw_memmap.h
        libs/ti/inc/hw_nvic.h
        libs/ti/inc/hw_onewire.h
        libs/ti/inc/hw_pwm.h
        libs/ti/inc/hw_qei.h
        libs/ti/inc/hw_shamd5.h
        libs/ti/inc/hw_ssi.h
        libs/ti/inc/hw_sysctl.h
        libs/ti/inc/hw_sysexc.h
        libs/ti/inc/hw_timer.h
        libs/ti/inc/hw_types.h
        libs/ti/inc/hw_uart.h
        libs/ti/inc/hw_udma.h
        libs/ti/inc/hw_usb.h
        libs/ti/inc/hw_watchdog.h
        libs/ti/inc/tm4c123gh6pm.h
        libs/ti/sensorlib/ak8963.c
        libs/ti/sensorlib/ak8963.h
        libs/ti/sensorlib/ak8975.c
        libs/ti/sensorlib/ak8975.h
        libs/ti/sensorlib/bmp180.c
        libs/ti/sensorlib/bmp180.h
        libs/ti/sensorlib/bq27510g3.c
        libs/ti/sensorlib/bq27510g3.h
        libs/ti/sensorlib/cm3218.c
        libs/ti/sensorlib/cm3218.h
        libs/ti/sensorlib/comp_dcm.c
        libs/ti/sensorlib/comp_dcm.h
        libs/ti/sensorlib/hw_ak8963.h
        libs/ti/sensorlib/hw_ak8975.h
        libs/ti/sensorlib/hw_bmp180.h
        libs/ti/sensorlib/hw_bq27510g3.h
        libs/ti/sensorlib/hw_cm3218.h
        libs/ti/sensorlib/hw_isl29023.h
        libs/ti/sensorlib/hw_kxti9.h
        libs/ti/sensorlib/hw_l3gd20h.h
        libs/ti/sensorlib/hw_lsm303d.h
        libs/ti/sensorlib/hw_lsm303dlhc.h
        libs/ti/sensorlib/hw_mpu6050.h
        libs/ti/sensorlib/hw_mpu9150.h
        libs/ti/sensorlib/hw_sht21.h
        libs/ti/sensorlib/hw_tmp006.h
        libs/ti/sensorlib/hw_tmp100.h
        libs/ti/sensorlib/i2cm_drv.c
        libs/ti/sensorlib/i2cm_drv.h
        libs/ti/sensorlib/isl29023.c
        libs/ti/sensorlib/isl29023.h
        libs/ti/sensorlib/kxti9.c
        libs/ti/sensorlib/kxti9.h
        libs/ti/sensorlib/l3gd20h.c
        libs/ti/sensorlib/l3gd20h.h
        libs/ti/sensorlib/lsm303d.c
        libs/ti/sensorlib/lsm303d.h
        libs/ti/sensorlib/lsm303dlhc_accel.c
        libs/ti/sensorlib/lsm303dlhc_accel.h
        libs/ti/sensorlib/lsm303dlhc_mag.c
        libs/ti/sensorlib/lsm303dlhc_mag.h
        libs/ti/sensorlib/magneto.c
        libs/ti/sensorlib/magneto.h
        libs/ti/sensorlib/mpu6050.c
        libs/ti/sensorlib/mpu6050.h
        libs/ti/sensorlib/mpu9150.c
        libs/ti/sensorlib/mpu9150.h
        libs/ti/sensorlib/quaternion.c
        libs/ti/sensorlib/quaternion.h
        libs/ti/sensorlib/sht21.c
        libs/ti/sensorlib/sht21.h
        libs/ti/sensorlib/tmp006.c
        libs/ti/sensorlib/tmp006.h
        libs/ti/sensorlib/tmp100.c
        libs/ti/sensorlib/tmp100.h
        libs/ti/sensorlib/vector.c
        libs/ti/sensorlib/vector.h
        libs/ti/usblib/device/usbdaudio.c
        libs/ti/usblib/device/usbdaudio.h
        libs/ti/usblib/device/usbdbulk.c
        libs/ti/usblib/device/usbdbulk.h
        libs/ti/usblib/device/usbdcdc.c
        libs/ti/usblib/device/usbdcdc.h
        libs/ti/usblib/device/usbdcdesc.c
        libs/ti/usblib/device/usbdcomp.c
        libs/ti/usblib/device/usbdcomp.h
        libs/ti/usblib/device/usbdconfig.c
        libs/ti/usblib/device/usbddfu-rt.c
        libs/ti/usblib/device/usbddfu-rt.h
        libs/ti/usblib/device/usbdenum.c
        libs/ti/usblib/device/usbdevice.h
        libs/ti/usblib/device/usbdevicepriv.h
        libs/ti/usblib/device/usbdhandler.c
        libs/ti/usblib/device/usbdhid.c
        libs/ti/usblib/device/usbdhid.h
        libs/ti/usblib/device/usbdhidgamepad.c
        libs/ti/usblib/device/usbdhidgamepad.h
        libs/ti/usblib/device/usbdhidkeyb.c
        libs/ti/usblib/device/usbdhidkeyb.h
        libs/ti/usblib/device/usbdhidmouse.c
        libs/ti/usblib/device/usbdhidmouse.h
        libs/ti/usblib/device/usbdmsc.c
        libs/ti/usblib/device/usbdmsc.h
        libs/ti/usblib/host/usbhaudio.c
        libs/ti/usblib/host/usbhaudio.h
        libs/ti/usblib/host/usbhhid.c
        libs/ti/usblib/host/usbhhid.h
        libs/ti/usblib/host/usbhhidkeyboard.c
        libs/ti/usblib/host/usbhhidkeyboard.h
        libs/ti/usblib/host/usbhhidmouse.c
        libs/ti/usblib/host/usbhhidmouse.h
        libs/ti/usblib/host/usbhhub.c
        libs/ti/usblib/host/usbhhub.h
        libs/ti/usblib/host/usbhmsc.c
        libs/ti/usblib/host/usbhmsc.h
        libs/ti/usblib/host/usbhost.h
        libs/ti/usblib/host/usbhostenum.c
        libs/ti/usblib/host/usbhostpriv.h
        libs/ti/usblib/host/usbhscsi.c
        libs/ti/usblib/host/usbhscsi.h
        libs/ti/usblib/usb-ids.h
        libs/ti/usblib/usbaudio.h
        libs/ti/usblib/usbbuffer.c
        libs/ti/usblib/usbcdc.h
        libs/ti/usblib/usbdesc.c
        libs/ti/usblib/usbdfu.h
        libs/ti/usblib/usbdma.c
        libs/ti/usblib/usbhid.h
        libs/ti/usblib/usbkeyboardmap.c
        libs/ti/usblib/usblib.h
        libs/ti/usblib/usblibpriv.h
        libs/ti/usblib/usbmode.c
        libs/ti/usblib/usbmsc.h
        libs/ti/usblib/usbringbuf.c
        libs/ti/usblib/usbtick.c
        libs/ti/usblib/usbulpi.c
        libs/ti/usblib/usbulpi.h
        libs/ti/utils/cmdline.c
        libs/ti/utils/cmdline.h
        libs/ti/utils/cpu_usage.c
        libs/ti/utils/cpu_usage.h
        libs/ti/utils/eeprom_pb.c
        libs/ti/utils/eeprom_pb.h
        libs/ti/utils/flash_pb.c
        libs/ti/utils/flash_pb.h
        libs/ti/utils/fswrapper.c
        libs/ti/utils/fswrapper.h
        libs/ti/utils/isqrt.c
        libs/ti/utils/isqrt.h
        libs/ti/utils/locator.c
        libs/ti/utils/locator.h
        libs/ti/utils/lwiplib.c
        libs/ti/utils/lwiplib.h
        libs/ti/utils/ptpdlib.c
        libs/ti/utils/ptpdlib.h
        libs/ti/utils/random.c
        libs/ti/utils/random.h
        libs/ti/utils/ringbuf.c
        libs/ti/utils/ringbuf.h
        libs/ti/utils/scheduler.c
        libs/ti/utils/scheduler.h
        libs/ti/utils/sine.c
        libs/ti/utils/sine.h
        libs/ti/utils/smbus.c
        libs/ti/utils/smbus.h
        libs/ti/utils/softi2c.c
        libs/ti/utils/softi2c.h
        libs/ti/utils/softssi.c
        libs/ti/utils/softssi.h
        libs/ti/utils/softuart.c
        libs/ti/utils/softuart.h
        libs/ti/utils/speexlib.c
        libs/ti/utils/speexlib.h
        libs/ti/utils/spi_flash.c
        libs/ti/utils/spi_flash.h
        libs/ti/utils/swupdate.c
        libs/ti/utils/swupdate.h
        libs/ti/utils/tftp.c
        libs/ti/utils/tftp.h
        libs/ti/utils/uartstdio.c
        libs/ti/utils/uartstdio.h
        libs/ti/utils/ustdlib.c
        libs/ti/utils/ustdlib.h
        libs/ti/utils/wavfile.c
        libs/ti/utils/wavfile.h
        modules/blinky/blinky.c
        modules/boilerplate/boilerplate.c
        modules/boilerplate/boilerplate.h
        modules/can_test/can_test.c
        modules/echronos_test/echronos_test.c
        modules/timer_test/timer_test.c
        Makefile
        README.md)
include_directories(
        ${TI_LIBS}
        modules/boilerplate
        echronos/build/can_test-echronos
)

add_library(boilerplate modules/boilerplate/boilerplate.c libs/ros_echronos/NodeHandle.cpp libs/ros_echronos/include/NodeHandle.hpp libs/ros_echronos/Publisher.cpp libs/ros_echronos/Subscriber.cpp libs/ros_echronos/Message_Buffer.cpp libs/ros_echronos/ListNode.cpp libs/ros_echronos/include/ListNode.hpp libs/ros_echronos/Message.cpp libs/ros_echronos/include/Message.hpp libs/ros_echronos/include/alloc.hpp libs/ros_echronos/alloc.cpp libs/ros_echronos/arch/tm4c/can_impl.cpp libs/ros_echronos/include/can_impl.hpp)
add_custom_target(can_test-echronos can_test/can_test.prx)
add_executable(can_test.elf modules/can_test/can_test.c libs/ros_echronos/arch/tm4c/can_impl.cpp libs/ros_echronos/include/can_impl.hpp)
target_link_libraries(can_test.elf ti_libs boilerplate echronos/build/can_test-echronos/*.o)